Fixed overflow

--- a/main.scss
+++ b/main.scss
@@ -4,12 +4,13 @@ $text-dark: #18191F;
 $text-light: white;
 
 body {
-  overflow-x: hidden;;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
+  width: 100%;
 }
 
 p{
